--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-# MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# PUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/baseone
 spring.datasource.username=root
 spring.datasource.password=1234
 
-# Hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=true
+spring.main.allow-bean-definition-overriding=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.static-path-pattern=/static/**
+#
+#logging.level.org.springframework=debug
+#logging.level.org.hibernate=debug
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
